services/career-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: career-service
  labels:
    app: career-service
spec:
  selector:
    app: career-service
  ports:
    - name: http
      port: 8001
      targetPort: 8001
