services/career-service/k8s/gateway-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: career-service-gateway-route
spec:
  hosts:
    - "*"
  gateways:
    - career-service-gateway
  http:
    - match:
        - uri:
            prefix: /api/carreras
        - uri:
            exact: /health
        - uri:
            exact: /
      route:
        - destination:
            host: career-service
            port:
              number: 8001
